Added links to footer
for github and netlify

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Welcome to the Weather App!</h1>
-    <footer>Coded by Tamia Sims</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/mia24sims" target="_blank">Tamia Sims</a> and
+      is hosted on
+      <a href="https://github.com/mia24sims?tab=repositories" target="_blank"
+        >Github</a
+      >
+      and website hosted
+      <a href="https://weathersearchshecodes.netlify.app/" target="_blank"
+        >on Netlify</a
+      >
+    </footer>
   </body>
 </html>
