--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <footer>
       Coded by
       <a href="https://github.com/mia24sims" target="_blank">Tamia Sims</a> and
-      is hosted on
+      is open-sourced on
       <a href="https://github.com/mia24sims?tab=repositories" target="_blank"
         >Github</a
       >
