--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App!</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Moscow</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 3.13km/h
+        </p>
+      </div>
+      <div>⛅12&deg;C</div>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/mia24sims" target="_blank">Tamia Sims</a> and
       is open-sourced on
       <a href="https://github.com/mia24sims?tab=repositories" target="_blank"
