Added classes in HTML & CSS file

--- a/index.html
+++ b/index.html
@@ -3,37 +3,67 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Moscow</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
+    <div class="page">
+      <header>
+        <form>
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-bar"
+          />
+          <input type="submit" value="Search" class="search-button" />
+        </form>
+      </header>
+      <main>
+        <div class="weather-info">
+          <h1>
+            <strong> Moscow </strong>
+          </h1>
+          <div class="today-emoji">⛅ <span class="degree">12&deg;C</span></div>
+        </div>
+        <p class="description">
+          Tuesday 14:49, Partly Cloudy
           <br />
           Humidity: 66%, Wind: 3.13km/h
         </p>
-      </div>
-      <div>⛅12&deg;C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/mia24sims" target="_blank">Tamia Sims</a> and
-      is open-sourced on
-      <a href="https://github.com/mia24sims?tab=repositories" target="_blank"
-        >Github</a
-      >
-      and website hosted
-      <a href="https://weathersearchshecodes.netlify.app/" target="_blank"
-        >on Netlify</a
-      >
-    </footer>
+
+        <ul class="list-container">
+          <li>
+            ☀️ <br />
+            Tue
+          </li>
+          <li>
+            ⛅ <br />
+            Wed
+          </li>
+          <li>
+            🌦️ <br />
+            Thur
+          </li>
+          <li>
+            🌫️<br />
+            Fri
+          </li>
+          <li>⛈️ <br />Sat</li>
+        </ul>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/mia24sims" target="_blank">Tamia Sims</a>
+        and is open-sourced on
+        <a href="https://github.com/mia24sims?tab=repositories" target="_blank"
+          >Github</a
+        >
+        and website hosted
+        <a href="https://weathersearchshecodes.netlify.app/" target="_blank"
+          >on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
