--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
           <div class="today-emoji">⛅ <span class="degree">12&deg;C</span></div>
         </div>
         <p class="description">
-          Tuesday 14:49, Partly Cloudy
+          Tuesday <span class="weather-stats">14:49</span>, Partly Cloudy
           <br />
-          Humidity: 66%, Wind: 3.13km/h
+          Humidity: <span class="weather-stats">66%</span>, Wind:
+          <span class="weather-stats">3.13km/h</span>
         </p>
 
         <ul class="list-container">
