Injected more Weather data

--- a/index.html
+++ b/index.html
@@ -37,10 +37,13 @@
           </div>
         </div>
         <p class="description">
-          Tuesday <span class="weather-stats">14:49</span>, Partly Cloudy
+          <span id="time">Tuesday <span class="weather-stats">14:49</span></span>,
+          <span id="imagery"></span>
           <br />
-          Humidity: <span class="weather-stats">66%</span>, Wind:
-          <span class="weather-stats">3.13km/h</span>
+          Humidity: <span class="weather-stats" id="humidity"></span
+          ><span class="weather-stats">%</span>, Wind:
+          <span class="weather-stats" id="wind"></span
+          ><span class="weather-stats">km/h</span>
         </p>
 
         <ul class="list-container">
