Added api for weather icon
created a span id= icon
injecting in js by creating a  variable equal to `img src= "${}"/>;

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
             <strong> </strong>
           </h1>
           <div class="today-emoji">
-            ⛅ <span class="degree" id="degree"></span>&degF
+            <span id="icon"> </span>
+
+            <span class="degree" id="degree"></span>&degF
           </div>
         </div>
         <p class="description">
-          <span id="time">Tuesday <span class="weather-stats">14:49</span></span>,
+          <span id="time">Tuesday <span class="weather-stats">14:49</span></span
+          >,
           <span id="imagery"></span>
           <br />
           Humidity: <span class="weather-stats" id="humidity"></span
