Added forecast html and css
days, icons and temps

--- a/index.html
+++ b/index.html
@@ -48,26 +48,58 @@
           <span class="weather-stats" id="wind"></span
           ><span class="weather-stats">km/h</span>
         </p>
-
-        <ul class="list-container">
-          <li>
-            ☀️ <br />
-            Tue
-          </li>
-          <li>
-            ⛅ <br />
-            Wed
-          </li>
-          <li>
-            🌦️ <br />
-            Thur
-          </li>
-          <li>
-            🌫️<br />
-            Fri
-          </li>
-          <li>⛈️ <br />Sat</li>
-        </ul>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Thurs</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15&deg;</strong>
+              </div>
+              <div class="weather-forecast-temperature">19&deg;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15&deg;</strong>
+              </div>
+              <div class="weather-forecast-temperature">19&deg;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15&deg;</strong>
+              </div>
+              <div class="weather-forecast-temperature">19&deg;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15&deg;</strong>
+              </div>
+              <div class="weather-forecast-temperature">19&deg;</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">⛅</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15&deg;</strong>
+              </div>
+              <div class="weather-forecast-temperature">19&deg;</div>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         This project was coded by
