--- a/index.html
+++ b/index.html
@@ -48,58 +48,7 @@
           <span class="weather-stats" id="wind"></span
           ><span class="weather-stats">km/h</span>
         </p>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Thurs</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15&deg;</strong>
-              </div>
-              <div class="weather-forecast-temperature">19&deg;</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15&deg;</strong>
-              </div>
-              <div class="weather-forecast-temperature">19&deg;</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15&deg;</strong>
-              </div>
-              <div class="weather-forecast-temperature">19&deg;</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15&deg;</strong>
-              </div>
-              <div class="weather-forecast-temperature">19&deg;</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">⛅</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong>15&deg;</strong>
-              </div>
-              <div class="weather-forecast-temperature">19&deg;</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
