Updated css and added functions
used api to inject actual forecast data

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="today-emoji">
             <span id="icon"> </span>
 
-            <span class="degree" id="degree"></span>&degF
+            <span class="degree" id="degree"></span>&degC
           </div>
         </div>
         <p class="description">
